<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MikvaCalculator</string>
    <string name="previous_flows">Previous Flows</string>
    <string name="action_settings">Settings</string>
    <string name="opening_label">If a flow happened today, click before or after sunset:</string>
    <string name="before_sunset">before sunset</string>
    <string name="after_sunset">after sunset</string>
    <string name="calculate_before">Before Sunset</string>
    <string name="calculate_after">After Sunset</string>
    <string name="after">after</string>
    <string name="days">days</string>
    <string name="hefsek_label">The hefsek tahara will be:</string>
    <string name="mikva_label_past">Mikva night :</string>
    <string name="hefsek_label_past">Hefsek tahara :</string>
    <string name="mikva_label">Mikva night will be:</string>
    <string name="top_label">Choose the date of the flow</string>
    <string name="today_before_sunset">Before sunset</string>
    <string name="today_after_sunset">After sunset</string>
    <string name="add_flow">New Flow</string>
    <string name="add_to_cal">Add to Calendar</string>
    <string name="delete_flow">Delete Flow</string>
    <string name="day_thirty">Day 30 is :</string>
    <string name="day_thirty_one">Day 31 is :</string>
    <string name="day_thirty_past">Day 30 :</string>
    <string name="day_thirty_one_past">Day 31 :</string>
    <string name="add_to_calendar">Add Dates to Calendar</string>
    <string name="saw_blood">Date of the Flow</string>
    <string name="hefsek">Hefsek Tahara</string>
    <string name="mikva">Mikva Night</string>
    <string name="thirty">Day 30</string>
    <string name="thirty_one">Day 31</string>
    <string name="haflaga">Day of haflaga</string>
    <string name="flow">The day of the flow is:</string>
    <string name="flow_past">The day of the flow :</string>
    <string name="click">Click on a date to add it to the calendar</string>
     <string name="warning">Welcome to MikvaCalculator. To add a flow, click in the top right corner. Or just click OK.</string>

</resources>
